Old version/parsers/antlr/playershape/PlayerShapeAntlrParser.java
/*
 * Copyright (c) 1987-2022 Angband contributors.
 *
 * This work is free software; you can redistribute it and/or modify it
 * under the terms of either:
 *
 * a) the GNU General Public License as published by the Free Software
 *    Foundation, version 2, or
 *
 * b) the Angband licence:
 *    This software may be copied and distributed for educational, research,
 *    and not for profit purposes provided that this copyright and statement
 *    are included in all such copies.  Other copyrights may also apply.
 *
 *    Java code copyright (c) Rowan Crowther 2026
 */

// Generated from C:/Users/rowan/Documents/IntelliJProjects/Angband.4.2.6/src/main/java/uk/co/jackoftrades/backend/io/parsers/antlr/grammars/PlayerShapeAntlr.g4 by ANTLR 4.13.2
package uk.co.jackoftrades.backend.io.parsers.antlr.playershape;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import uk.co.jackoftrades.backend.utils.Flag;
import uk.co.jackoftrades.middle.Effect;
import uk.co.jackoftrades.middle.Expression;
import uk.co.jackoftrades.middle.combat.enums.ProjectionEnum;
import uk.co.jackoftrades.middle.enums.EffectBaseType;
import uk.co.jackoftrades.middle.enums.EffectEnum;
import uk.co.jackoftrades.middle.enums.ValueEnum;
import uk.co.jackoftrades.middle.objects.enums.ElementEnum;
import uk.co.jackoftrades.middle.objects.enums.ObjectFlag;
import uk.co.jackoftrades.middle.player.PlayerBlow;
import uk.co.jackoftrades.middle.player.PlayerShape;
import uk.co.jackoftrades.middle.player.enums.PlayerFlag;
import uk.co.jackoftrades.middle.player.enums.PlayerSkill;
import uk.co.jackoftrades.middle.player.enums.TimedEffect;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PlayerShapeAntlrParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            COMMENT = 1, EOL = 2, NAME = 3, COMBAT = 4, SKILL_DISARM_PHYS = 5, SKILL_DISARM_MAGIC = 6,
            SKILL_SAVE = 7, SKILL_STEALTH = 8, SKILL_SEARCH = 9, SKILL_MELEE = 10, SKILL_THROW = 11,
            SKILL_DIG = 12, OBJ_FLAGS = 13, PLAYER_FLAGS = 14, VALUES = 15, EFFECT = 16, DICE = 17,
            EXPR = 18, EFFECT_MSG = 19, BLOW = 20, TEXT = 21, COLON = 22, OR = 23, LBRACKET = 24,
            RBRACKET = 25;
    public static final int
            RULE_name = 0, RULE_combat = 1, RULE_skillDisarmPhys = 2, RULE_skillDisarmMagic = 3,
            RULE_skillSave = 4, RULE_skillStealth = 5, RULE_skillSearch = 6, RULE_skillMelee = 7,
            RULE_skillThrow = 8, RULE_skillDig = 9, RULE_objFlags = 10, RULE_playerFlags = 11,
            RULE_values = 12, RULE_effect = 13, RULE_dice = 14, RULE_expr = 15, RULE_effectMsg = 16,
            RULE_blow = 17, RULE_shape = 18, RULE_shapes = 19;

    private static String[] makeRuleNames() {
        return new String[]{
                "name", "combat", "skillDisarmPhys", "skillDisarmMagic", "skillSave",
                "skillStealth", "skillSearch", "skillMelee", "skillThrow", "skillDig",
                "objFlags", "playerFlags", "values", "effect", "dice", "expr", "effectMsg",
                "blow", "shape", "shapes"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, "'name:'", "'combat:'", "'skill-disarm-phys:'", "'skill-disarm-magic:'",
                "'skill-save:'", "'skill-stealth:'", "'skill-search:'", "'skill-melee:'",
                "'skill-throw:'", "'skill-dig:'", "'obj-flags:'", "'player-flags:'",
                "'values:'", "'effect:'", "'dice:'", "'expr:'", "'effect-msg:'", "'blow:'",
                null, "':'", null, "'['", "']'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "COMMENT", "EOL", "NAME", "COMBAT", "SKILL_DISARM_PHYS", "SKILL_DISARM_MAGIC",
                "SKILL_SAVE", "SKILL_STEALTH", "SKILL_SEARCH", "SKILL_MELEE", "SKILL_THROW",
                "SKILL_DIG", "OBJ_FLAGS", "PLAYER_FLAGS", "VALUES", "EFFECT", "DICE",
                "EXPR", "EFFECT_MSG", "BLOW", "TEXT", "COLON", "OR", "LBRACKET", "RBRACKET"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "PlayerShapeAntlr.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public PlayerShapeAntlrParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NameContext extends ParserRuleContext {
        public String shapeName;
        public Token TEXT;

        public TerminalNode NAME() {
            return getToken(PlayerShapeAntlrParser.NAME, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public NameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_name;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).enterName(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).exitName(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitName(this);
            else return visitor.visitChildren(this);
        }
    }

    public final NameContext name() throws RecognitionException {
        NameContext _localctx = new NameContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_name);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(40);
                match(NAME);
                setState(41);
                ((NameContext) _localctx).TEXT = match(TEXT);

                ((NameContext) _localctx).shapeName = ((NameContext) _localctx).TEXT.getText();

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CombatContext extends ParserRuleContext {
        public int shapeToHit;
        public int shapeToDam;
        public int shapeToAC;
        public Token toHit;
        public Token toDam;
        public Token toAC;

        public TerminalNode COMBAT() {
            return getToken(PlayerShapeAntlrParser.COMBAT, 0);
        }

        public List<TerminalNode> COLON() {
            return getTokens(PlayerShapeAntlrParser.COLON);
        }

        public TerminalNode COLON(int i) {
            return getToken(PlayerShapeAntlrParser.COLON, i);
        }

        public List<TerminalNode> TEXT() {
            return getTokens(PlayerShapeAntlrParser.TEXT);
        }

        public TerminalNode TEXT(int i) {
            return getToken(PlayerShapeAntlrParser.TEXT, i);
        }

        public CombatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_combat;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).enterCombat(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).exitCombat(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitCombat(this);
            else return visitor.visitChildren(this);
        }
    }

    public final CombatContext combat() throws RecognitionException {
        CombatContext _localctx = new CombatContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_combat);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                match(COMBAT);
                setState(45);
                ((CombatContext) _localctx).toHit = match(TEXT);
                setState(46);
                match(COLON);
                setState(47);
                ((CombatContext) _localctx).toDam = match(TEXT);
                setState(48);
                match(COLON);
                setState(49);
                ((CombatContext) _localctx).toAC = match(TEXT);

                ((CombatContext) _localctx).shapeToHit = Integer.parseInt(((CombatContext) _localctx).toHit.getText());
                ((CombatContext) _localctx).shapeToDam = Integer.parseInt(((CombatContext) _localctx).toDam.getText());
                ((CombatContext) _localctx).shapeToAC = Integer.parseInt(((CombatContext) _localctx).toAC.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillDisarmPhysContext extends ParserRuleContext {
        public int shapeDisarmPhys;
        public Token TEXT;

        public TerminalNode SKILL_DISARM_PHYS() {
            return getToken(PlayerShapeAntlrParser.SKILL_DISARM_PHYS, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillDisarmPhysContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillDisarmPhys;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).enterSkillDisarmPhys(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).exitSkillDisarmPhys(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillDisarmPhys(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillDisarmPhysContext skillDisarmPhys() throws RecognitionException {
        SkillDisarmPhysContext _localctx = new SkillDisarmPhysContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_skillDisarmPhys);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(52);
                match(SKILL_DISARM_PHYS);
                setState(53);
                ((SkillDisarmPhysContext) _localctx).TEXT = match(TEXT);

                ((SkillDisarmPhysContext) _localctx).shapeDisarmPhys = Integer.parseInt(((SkillDisarmPhysContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillDisarmMagicContext extends ParserRuleContext {
        public int shapeDisarmMagic;
        public Token TEXT;

        public TerminalNode SKILL_DISARM_MAGIC() {
            return getToken(PlayerShapeAntlrParser.SKILL_DISARM_MAGIC, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillDisarmMagicContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillDisarmMagic;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).enterSkillDisarmMagic(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).exitSkillDisarmMagic(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillDisarmMagic(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillDisarmMagicContext skillDisarmMagic() throws RecognitionException {
        SkillDisarmMagicContext _localctx = new SkillDisarmMagicContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_skillDisarmMagic);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(56);
                match(SKILL_DISARM_MAGIC);
                setState(57);
                ((SkillDisarmMagicContext) _localctx).TEXT = match(TEXT);

                ((SkillDisarmMagicContext) _localctx).shapeDisarmMagic = Integer.parseInt(((SkillDisarmMagicContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillSaveContext extends ParserRuleContext {
        public int shapeSave;
        public Token TEXT;

        public TerminalNode SKILL_SAVE() {
            return getToken(PlayerShapeAntlrParser.SKILL_SAVE, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillSaveContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillSave;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).enterSkillSave(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).exitSkillSave(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillSave(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillSaveContext skillSave() throws RecognitionException {
        SkillSaveContext _localctx = new SkillSaveContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_skillSave);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(60);
                match(SKILL_SAVE);
                setState(61);
                ((SkillSaveContext) _localctx).TEXT = match(TEXT);

                ((SkillSaveContext) _localctx).shapeSave = Integer.parseInt(((SkillSaveContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillStealthContext extends ParserRuleContext {
        public int shapeStealth;
        public Token TEXT;

        public TerminalNode SKILL_STEALTH() {
            return getToken(PlayerShapeAntlrParser.SKILL_STEALTH, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillStealthContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillStealth;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).enterSkillStealth(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).exitSkillStealth(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillStealth(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillStealthContext skillStealth() throws RecognitionException {
        SkillStealthContext _localctx = new SkillStealthContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_skillStealth);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(64);
                match(SKILL_STEALTH);
                setState(65);
                ((SkillStealthContext) _localctx).TEXT = match(TEXT);

                ((SkillStealthContext) _localctx).shapeStealth = Integer.parseInt(((SkillStealthContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillSearchContext extends ParserRuleContext {
        public int shapeSearch;
        public Token TEXT;

        public TerminalNode SKILL_SEARCH() {
            return getToken(PlayerShapeAntlrParser.SKILL_SEARCH, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillSearchContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillSearch;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).enterSkillSearch(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).exitSkillSearch(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillSearch(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillSearchContext skillSearch() throws RecognitionException {
        SkillSearchContext _localctx = new SkillSearchContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_skillSearch);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(68);
                match(SKILL_SEARCH);
                setState(69);
                ((SkillSearchContext) _localctx).TEXT = match(TEXT);

                ((SkillSearchContext) _localctx).shapeSearch = Integer.parseInt(((SkillSearchContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillMeleeContext extends ParserRuleContext {
        public int shapeMelee;
        public Token TEXT;

        public TerminalNode SKILL_MELEE() {
            return getToken(PlayerShapeAntlrParser.SKILL_MELEE, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillMeleeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillMelee;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).enterSkillMelee(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).exitSkillMelee(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillMelee(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillMeleeContext skillMelee() throws RecognitionException {
        SkillMeleeContext _localctx = new SkillMeleeContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_skillMelee);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(72);
                match(SKILL_MELEE);
                setState(73);
                ((SkillMeleeContext) _localctx).TEXT = match(TEXT);

                ((SkillMeleeContext) _localctx).shapeMelee = Integer.parseInt(((SkillMeleeContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillThrowContext extends ParserRuleContext {
        public int shapeThrow;
        public Token TEXT;

        public TerminalNode SKILL_THROW() {
            return getToken(PlayerShapeAntlrParser.SKILL_THROW, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillThrowContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillThrow;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).enterSkillThrow(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener)
                ((PlayerShapeAntlrListener) listener).exitSkillThrow(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillThrow(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillThrowContext skillThrow() throws RecognitionException {
        SkillThrowContext _localctx = new SkillThrowContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_skillThrow);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                match(SKILL_THROW);
                setState(77);
                ((SkillThrowContext) _localctx).TEXT = match(TEXT);

                ((SkillThrowContext) _localctx).shapeThrow = Integer.parseInt(((SkillThrowContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class SkillDigContext extends ParserRuleContext {
        public int shapeDig;
        public Token TEXT;

        public TerminalNode SKILL_DIG() {
            return getToken(PlayerShapeAntlrParser.SKILL_DIG, 0);
        }

        public TerminalNode TEXT() {
            return getToken(PlayerShapeAntlrParser.TEXT, 0);
        }

        public SkillDigContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_skillDig;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).enterSkillDig(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).exitSkillDig(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitSkillDig(this);
            else return visitor.visitChildren(this);
        }
    }

    public final SkillDigContext skillDig() throws RecognitionException {
        SkillDigContext _localctx = new SkillDigContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_skillDig);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(80);
                match(SKILL_DIG);
                setState(81);
                ((SkillDigContext) _localctx).TEXT = match(TEXT);

                ((SkillDigContext) _localctx).shapeDig = Integer.parseInt(((SkillDigContext) _localctx).TEXT.getText());

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ObjFlagsContext extends ParserRuleContext {
        public ArrayList<ObjectFlag> objectFlags;
        public Token flag1;
        public Token flag2;

        public TerminalNode OBJ_FLAGS() {
            return getToken(PlayerShapeAntlrParser.OBJ_FLAGS, 0);
        }

        public List<TerminalNode> TEXT() {
            return getTokens(PlayerShapeAntlrParser.TEXT);
        }

        public TerminalNode TEXT(int i) {
            return getToken(PlayerShapeAntlrParser.TEXT, i);
        }

        public List<TerminalNode> OR() {
            return getTokens(PlayerShapeAntlrParser.OR);
        }

        public TerminalNode OR(int i) {
            return getToken(PlayerShapeAntlrParser.OR, i);
        }

        public ObjFlagsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_objFlags;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).enterObjFlags(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PlayerShapeAntlrListener) ((PlayerShapeAntlrListener) listener).exitObjFlags(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PlayerShapeAntlrVisitor)
                return ((PlayerShapeAntlrVisitor<? extends T>) visitor).visitObjFlags(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ObjFlagsContext objFlags() throws RecognitionException {
        ObjFlagsContext _localctx = new ObjFlagsContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_objFlags);

        ((ObjFlagsContext) _localctx).objectFlags = new ArrayList<>();

        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                match(OBJ_FLAGS);
                setState(85);
                ((ObjFlagsContext) _localctx).flag1 = match(TEXT);

                String flag1String = "OF_" + ((ObjFlagsContext) _localctx).flag1.getText().trim();
                _localctx.objectFlags.add(ObjectFlag.valueOf(flag1String));

                setState(92);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == OR) {
                    {
                        {
                            setState(87);
                            match(OR);
                            setState(88);
                            ((ObjFlagsContext) _localctx).flag2 = match(TEXT);

                            String flag2String = "OF_" + ((ObjFlagsContext) _localctx).flag2.getText().trim();
                            _localctx.objectFlags.add(ObjectFlag.valueOf(flag2String));

                        }
                    }
                    setState(94);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PlayerFlagsContext extends ParserRuleContext {
        public ArrayList<PlayerFlag> playerFlgs;
        public Token flag1;
        public Token flag2;

        public TerminalNode PLAYER_FLAGS() {
            return getToken(PlayerShapeAntlrParser.PLAYER_FLAGS, 0);
        }

        public List<TerminalNode> TEXT() {
            return getTokens(PlayerShapeAntlrParser.TEXT);
        }

        public TerminalNode TEXT(int i) {
            return getToken(PlayerShapeAntlrParser.TEXT, i);
        }
